--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
