--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "alasql": "^0.6.5",
     "axios": "^0.21.0",
     "native-base": "^2.15.0",
     "react": "16.13.1",
