--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-actions-sheet": "^0.4.2",
     "react-native-document-picker": "^4.2.0",
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "^1.9.0",
