--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     ext {
+        googlePlayServicesVersion = "+"
+        firebaseMessagingVersion = "+"
+
+        supportLibVersion = "23.1.1"
         buildToolsVersion = "29.0.2"
         minSdkVersion = 21
         compileSdkVersion = 29
