--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.63.4",
     "react-native-actions-sheet": "^0.4.2",
     "react-native-document-picker": "^4.2.0",
+    "react-native-dotenv": "^2.5.1",
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-crop-picker": "^0.35.2",
