--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.1.2",
+    "socket.io-client": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
